Fix the content visible issue

--- a/static/sass/_pattern_strip.scss
+++ b/static/sass/_pattern_strip.scss
@@ -968,9 +968,16 @@
       background: url("https://assets.ubuntu.com/v1/ea4d2cfd-CUBE-pattern.svg");
       content: "";
       height: 100%;
+      pointer-events: none;
       position: absolute;
       top: 0;
       width: 100%;
+      z-index: 1;
+    }
+
+    * {
+      position: relative;
+      z-index: 2;
     }
   }
 }
